--- a/public/index.html
+++ b/public/index.html
@@ -26,14 +26,15 @@
           <div>
             <div class="workout-stats"></div>
             <div class="buttons">
-              <a id="continue-btn" href="/exercise?" class="huge ui blue button">Continue Workout</a>
-              <a href="/exercise" class="huge positive ui button">New Workout</a>
+              <a id="continue-btn" href="/exercise?" class="huge ui black button">Continue Workout</a>
+              <a href="/exercise" class="huge pink ui button" style="color: #FFF;">New Workout</a>
             </div>
           </div>
         </div>
         <div class="new-workout">
           <h3>Create Your First Workout</h3>
-        </div>
+        </div><br>
+        <img class="excuses m-auto" src="./assets/pinkrunner.png" style="max-width: 100%;"><br>
       </div>
     </div>
   </div>
